...
        ),
        Screen(
            name: "📋 Todo App",
            destination: Destination.TodoIntro()
        ),
        Screen(
            name: "🥭 News App",
            destination: Destination.NewsHome()
        ),
        Screen(
            name: "Network: `URLSession` Example",
            destination: Destination.URLSession()
        ),
...
        ),
        Screen(
            name: "Map Example",
            destination: Destination.Map()
        ),
        Screen(
            name: "🏬 Store Overflow",
            destination: Destination.StoreSplash()
        ),
        Screen(
            name: "`TestUtils` UI Tests Demo",
            destination: Destination.TestUtilsUITestsDemo()
        ),
...
